[tool.poetry]
name = "bask"
version = "0.10.9"
description = "A fully Bayesian implementation of sequential model-based optimization"
authors = ["Karlson Pfannschmidt <kiudee@mail.upb.de>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
readme = "README.rst"
repository = "https://github.com/kiudee/bayes-skopt"
keywords = ["optimization", "bayesian", "hyperparameters", "robust"]
documentation = "https://bayes-skopt.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
arviz = ">=0.18.0"
emcee = ">=3.0.2"
matplotlib = ">=3.9.0"
numpy = ">=2.0.0"
scikit-learn = ">=1.6"
scikit-optimize = ">=0.10.2"
scipy = ">=1.13.0"
tqdm = ">=4.48.2"

nbsphinx = {version = ">=0.7.1", optional = true}
nbsphinx-link = {version = ">=1.3.0", optional = true}
numpydoc = {version = ">=1.1.0", optional = true}
Sphinx = {version = ">=3.1.2", optional = true}

[tool.poetry.dev-dependencies]
black = ">=24.0.0"
coverage = ">=5.2.1"
flake8 = ">=3.8.3"
flake8-bugbear = ">=20.1.4"
ipython = ">=7.17.0"
isort = ">=5.3.0"
nbsphinx = ">=0.7.1"
nbsphinx-link = ">=1.3.0"
nox = ">=2021.6.12"
nox-poetry = ">=0.8.6"
numpydoc = ">=1.1.0"
pip = ">=20.2.1"
pre-commit = ">=2.6.0"
pytest = ">=6.0.1"
pytest-runner = ">=5.2"
Sphinx = ">=3.1.2"
twine = ">=3.2.0"
watchdog = ">=0.10.3"
wheel = ">=0.34.2"

[tool.poetry.extras]
docs = ["Sphinx", "numpydoc", "nbsphinx", "nbsphinx-link"]
data = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kiudee/bayes-skopt/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
