[project]
name = "bask"
version = "0.11.0"
description = "A fully Bayesian implementation of sequential model-based optimization"
authors = [{ name = "Karlson Pfannschmidt", email = "kiudee@mail.upb.de" }]
requires-python = ">=3.10,<3.15"
readme = "README.rst"
license = "Apache-2.0"
keywords = [
    "optimization",
    "bayesian",
    "hyperparameters",
    "robust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "arviz>=0.18.0",
    "emcee>=3.0.2",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.6",
    "scikit-optimize>=0.10.2",
    "scipy>=1.13.0",
    "tqdm>=4.48.2",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=3.1.2",
    "numpydoc>=1.1.0",
    "nbsphinx>=0.7.1",
    "nbsphinx-link>=1.3.0",
]
data = []

[project.urls]
Repository = "https://github.com/kiudee/bayes-skopt"
Documentation = "https://bayes-skopt.readthedocs.io"
"Bug Tracker" = "https://github.com/kiudee/bayes-skopt/issues"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "coverage>=5.2.1",
    "doc8>=0.11.2",
    "flake8>=3.8.3",
    "flake8-bugbear>=20.1.4",
    "ipython>=7.17.0",
    "isort>=5.3.0",
    "nbsphinx>=0.7.1",
    "nbsphinx-link>=1.3.0",
    "nox>=2024.4.15",
    "nox-uv>=0.6.3",
    "numpydoc>=1.1.0",
    "pip>=20.2.1",
    "pre-commit>=2.6.0",
    "pytest>=6.0.1",
    "pytest-runner>=5.2",
    "Sphinx>=3.1.2",
    "twine>=3.2.0",
    "watchdog>=0.10.3",
    "wheel>=0.34.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
include = ["bask", "bask.*"]
